--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.19.0",
-        "bootstrap-sass": "^3.3.7",
-        "jquery": "^3.3.1",
         "node-sass": "^4.9.0",
         "sass-loader": "^7.0.3"
     },
@@ -13,5 +11,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production"
+    },
+    "dependencies": {
+        "ajv": "^6.5.1",
+        "bootstrap": "^4.1.1",
+        "jquery": "^3.3.1",
+        "popper.js": "^1.14.3"
     }
 }
